--- a/src/templates/update_transit.html
+++ b/src/templates/update_transit.html
@@ -22,16 +22,16 @@
 		<div class="form-group">
 			<label for="asset_tag" class="col-lg-2 control-label">LOAD DATE</label>
 			<div class="col-lg-2">
-				<input type="date" class="form-control"  name="load">
+				<input type="date" class="form-control"  name="load_dt">
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="asset_tag" class="col-lg-2 control-label">UNLOAD DATE</label>
 			<div class="col-lg-2">
-				<input type="date" class="form-control"  name="unload">
+				<input type="date" class="form-control"  name="unload_dt">
 			</div>
 		</div>
-		<input class="btn btn-primary" type="submit" name="GENERATE">
+		<input class="btn btn-primary" type="submit" value="SUBMIT">
 	</fieldset>
 </form>
 
